chore: change indents to 4 spaces to align with project standards